# hepXweekly

./: .gitignore  LICENSE  README.md  hep-ex-weekly.sh  hep-ex-weekly.sh~  hep_ex_weekly.py~  pyproject.toml
hep_ex_weekly/: __main__.py  _core.py
hep_ex_weekly/_utils/: constants.py  mplstyles.py  paths.py
